--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <script src="index.js" defer></script>
     <link rel="icon" type="image/png" sizes="32x32" href="images/bullseye.png" alt="Logo of the page">
 </head>
+
 <body>
+    
     <div class="all" id="alll">
 
         <div class='pointsSlc'>
             <label>
                 <p>Wybierz ilość punktów</p>
-                <select id="sl">
+                <select id="sl" >
                     <option value='101'>101</option>
                     <option value='301'>301</option>
-                    <option value='501'>501</option>
+                    <option value='501' selected="selected">501</option>
                     <option value='701'>701</option>
                     <option value='1001'>1001</option>
                 </select>
